home lg screen...

--- a/styles/utils/variables.scss
+++ b/styles/utils/variables.scss
@@ -2,15 +2,7 @@
 $font-primary: SK Reykjavik Rounded;
 $font-secondary: Frederic;
 
-$color-purple: #D9A1F9;
-$color-peach: #B6E1DE;
-$color-pea: #F4E0DB;
-$color-yellow: #E7DA65;
-$color-green: #6DD0A2;
-$color-ash: #F8F8F8;
-$color-brown: #F3E0DB;
-$color-orange: #ED724D;
-$color-body: #F8F8F8;
+$color-primary: #FCF7F3;
 
 $ease-in-out: cubic-bezier(0.77, 0, 0.175, 1);
 
