--- a/views/base.pug
+++ b/views/base.pug
@@ -6,8 +6,8 @@ html(class=isDesktop ? "desktop" : isTablet ? "tablet" : isPhone ? "phone" : "" 
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     base(href="/")
-    title="Leland"
-    meta(name="description" content="leland is a beauty app")
+    title="Porche"
+    meta(name="description" content="porche is a jewelry brand")
     link(href="main.css" rel="stylesheet")
     meta(name="msapplication-TileColor" content="#f4d8cc")
     meta(name="theme-color" content="#f4d8cc")
