--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -1,1 +1,54 @@
-h2="hello world"
+.home 
+	.home__container 
+		.home__left 
+			figure
+				img(alt="jewelry" src='porche_7.jpg')
+		.home__right 
+			h2="DISCOVER MAGICAL RADIANCE JEWELLERY SET"
+			p="This collection was created in the spring of 2023. When creating the collection, jewelers did not deviate one iota from their principles of responsible attitude to natural resources and the environment"
+			a.read__more
+				h3="READ MORE"
+		.home__products__gallery 
+			.home__products__gallery__top 
+				h3="SELECT PRODUCT CATEGORY"
+				a.show__all(href="/")
+					h4="SHOW ALL" 
+			.home__products__gallery__bottom 
+				article.gallery__item
+					.gallery__item__top 
+						h4="NECKLACES"
+						span="/01"
+					.gallery__item__bottom 
+						figure 
+							img(src="porche_10.jpg", alt="NECKLACE")
+				article.gallery__item
+					.gallery__item__top 
+						h4="NECKLACES"
+						span="/01"
+					.gallery__item__bottom 
+						figure 
+							img(src="porche_10.jpg", alt="NECKLACE")
+
+				article.gallery__item
+					.gallery__item__top 
+						h4="NECKLACES"
+						span="/01"
+					.gallery__item__bottom 
+						figure 
+							img(src="porche_10.jpg", alt="NECKLACE")
+
+				article.gallery__item
+					.gallery__item__top 
+						h4="NECKLACES"
+						span="/01"
+					.gallery__item__bottom 
+						figure 
+							img(src="porche_10.jpg", alt="NECKLACE")
+				
+				article.gallery__item
+					.gallery__item__top 
+						h4="NECKLACES"
+						span="/01"
+					.gallery__item__bottom 
+						figure 
+							img(src="porche_10.jpg", alt="NECKLACE")
