--- a/views/partials/navigation.pug
+++ b/views/partials/navigation.pug
@@ -1,1 +1,10 @@
-h2="nav"
+nav.navigation
+  a.navigation__link(href="/")
+    svg.bi.bi-filter-left(xmlns='http://www.w3.org/2000/svg' width='32' height='32' fill='currentColor' viewbox='0 0 16 16')
+        path(d='M2 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z')
+
+  ul.navigation__list
+    li.navigation__list__item
+        a.navigation__list__link(data-animation="link" href='/')
+            span="CART (0)"
+  
