--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -14,36 +14,36 @@
 				a.show__all(href="/")
 					h4="SHOW ALL" 
 			.home__products__gallery__bottom 
-				article.gallery__item
+				article.gallery__item.first
 					.gallery__item__top 
 						h4="NECKLACES"
 						span="/01"
 					.gallery__item__bottom 
 						figure 
-							img(src="porche_10.jpg", alt="NECKLACE")
+							img(src="porche_10.png", alt="NECKLACE")
 				article.gallery__item
 					.gallery__item__top 
-						h4="NECKLACES"
-						span="/01"
+						h4="RING"
+						span="/02"
 					.gallery__item__bottom 
 						figure 
-							img(src="porche_10.jpg", alt="NECKLACE")
+							img(src="porche_6.webp", alt="NECKLACE")
 
 				article.gallery__item
 					.gallery__item__top 
-						h4="NECKLACES"
-						span="/01"
+						h4="CHAIN"
+						span="/03"
 					.gallery__item__bottom 
 						figure 
-							img(src="porche_10.jpg", alt="NECKLACE")
+							img(src="porche_4.webp", alt="NECKLACE")
 
 				article.gallery__item
 					.gallery__item__top 
-						h4="NECKLACES"
-						span="/01"
+						h4="EARING"
+						span="/04"
 					.gallery__item__bottom 
 						figure 
-							img(src="porche_10.jpg", alt="NECKLACE")
+							img(src="porche_11.png", alt="NECKLACE")
 				
 				article.gallery__item
 					.gallery__item__top 
@@ -51,4 +51,85 @@
 						span="/01"
 					.gallery__item__bottom 
 						figure 
-							img(src="porche_10.jpg", alt="NECKLACE")
+							img(src="porche_10.png", alt="NECKLACE")
+	
+	.home__container__tablet 
+		.home__container__inner
+			.home__overlay
+				h2="DISCOVER MAGICAL RADIANCE JEWELLERY SET"
+				p="This collection was created in the spring of 2023. When creating the collection, jewelers did not deviate one iota from their principles of responsible attitude to natural resources and the environment"
+				.btns
+					a.read__more
+						h3="READ MORE"
+					a.read__more
+						h3="SEE ALL"
+			.home__gallery 
+				a.gallery__item__media.first
+					.gallery__item__top 
+						h4="NECKLACES"
+						span="/01"
+					.gallery__item__bottom 
+						figure 
+							img(src="porche_10.png", alt="NECKLACE")
+				a.gallery__item__media.first
+					.gallery__item__top 
+						h4="NECKLACES"
+						span="/01"
+					.gallery__item__bottom 
+						figure 
+							img(src="porche_10.png", alt="NECKLACE")
+				a.gallery__item__media.first
+					.gallery__item__top 
+						h4="NECKLACES"
+						span="/01"
+					.gallery__item__bottom 
+						figure 
+							img(src="porche_10.png", alt="NECKLACE")
+				a.gallery__item__media.first
+					.gallery__item__top 
+						h4="NECKLACES"
+						span="/01"
+					.gallery__item__bottom 
+						figure 
+							img(src="porche_10.png", alt="NECKLACE")
+				a.gallery__item__media.first
+					.gallery__item__top 
+						h4="NECKLACES"
+						span="/01"
+					.gallery__item__bottom 
+						figure 
+							img(src="porche_10.png", alt="NECKLACE")
+				//- article.gallery__item
+				//- 	.gallery__item__top 
+				//- 		h4="RING"
+				//- 		span="/02"
+				//- 	.gallery__item__bottom 
+				//- 		figure 
+				//- 			img(src="porche_6.webp", alt="NECKLACE")
+
+				//- article.gallery__item
+				//- 	.gallery__item__top 
+				//- 		h4="CHAIN"
+				//- 		span="/03"
+				//- 	.gallery__item__bottom 
+				//- 		figure 
+				//- 			img(src="porche_4.webp", alt="NECKLACE")
+
+				//- article.gallery__item
+				//- 	.gallery__item__top 
+				//- 		h4="EARING"
+				//- 		span="/04"
+				//- 	.gallery__item__bottom 
+				//- 		figure 
+				//- 			img(src="porche_11.png", alt="NECKLACE")
+				
+				//- article.gallery__item
+				//- 	.gallery__item__top 
+				//- 		h4="NECKLACES"
+				//- 		span="/01"
+				//- 	.gallery__item__bottom 
+				//- 		figure 
+				//- 			img(src="porche_10.png", alt="NECKLACE")
+	
+
+					
