--- a/styles/layout/navigation.scss
+++ b/styles/layout/navigation.scss
@@ -20,16 +20,15 @@
     transition: opacity 0.4s ease;
     width: 12.8rem;
   
+    @include media('<tablet') {
+        left: 3.5rem;
+    }
+
+    
     &:hover {
       opacity: 0.5;
     }
   
-    @include media('<phone') {
-      height: 4.3rem;
-      left: 5rem;
-      top: 5rem;
-      width: 27.9rem;
-    }
   }
   
   .navigation__link__icon {
@@ -45,6 +44,11 @@
     position: absolute;
     right: 2rem;
     top: 1.7rem;
+    @include media('<tablet') {
+        right: 3.5rem;
+        align-self: center;
+        margin-top: 1.6rem;
+    }
   }
   
   .navigation__list__link { 
