--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -5,122 +5,292 @@
     top: 0;
     width: 100%;
     height: 100vh;
+
     .home__container{
         display: grid;
         grid-template-columns: repeat(12,8.33333%);
         grid-template-rows: repeat(12,8.33333%);
         grid-auto-flow: row dense;
         height: 100%;
-    }
-    .home__left {
-        grid-column-start: 1;
-        grid-column-end: 7;
-        grid-row: span 12;
-        figure{
-            height: 100%;
-            width: 100%;
-            img{
+
+        @include media('<tablet') {
+           display: none;
+           }
+
+           .home__left {
+            grid-column-start: 1;
+            grid-column-end: 7;
+            grid-row: span 12;
+            figure{
                 height: 100%;
                 width: 100%;
-                vertical-align: top;
-                object-fit: cover;
-            }
-        }
-    }
-    .home__right {
-        grid-column-start: 7;
-        grid-column-end: 13;
-        grid-row: span 12;
-        background-color: $color-primary;
-        padding: 0rem 6rem;
-        padding-top: 12rem;
-        text-align: center;
-        h2{
-            font-size: 4.3rem;
-            line-height: 5.7rem;
-            letter-spacing: 0.2rem;
-        }
-        p{
-            font-size: 1.9rem;
-            width: 80%;
-            margin: auto;
-            margin-top: 4.5rem;
-            margin-bottom: 4.5rem;
-            line-height: 3.2rem;
-        }
-        .read__more{
-            text-decoration: underline;
-            text-underline-offset: 1.3rem;
-            h3{
-                font-size: 2.4rem;
-                font-weight: 100;
-            }
-        }
-    }
-
-    .home__products__gallery {
-        background-color: white;
-        position: absolute;
-        top: 50rem;
-        left: 65.5rem;
-        display: grid;
-        overflow: hidden;
-
-        .home__products__gallery__top {
-            padding: 2rem 4rem;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            width: 60.5vw;
-            border-bottom: 1px solid black;
-            h3{
-                font-size: 2.2rem;
-                margin-left: -1.5rem;
-                margin-top: -0.6rem;
-            }
-            .show__all{
-                margin-right: -1.1rem;
-                border: 1px solid black;
-                padding: 1.8rem 1.7rem;
-                h4{
-                    font-size: 1.5rem;
+                img{
+                    height: 100%;
+                    width: 100%;
+                    vertical-align: top;
+                    object-fit: cover;
                 }
             }
         }
-
-        .home__products__gallery__bottom{
+        .home__right {
+            grid-column-start: 7;
+            grid-column-end: 13;
+            grid-row: span 12;
+            background-color: $color-primary;
+            padding: 0rem 6rem;
+            padding-top: 9rem;
+            text-align: center;
+            h2{
+                font-size: 4.3rem;
+                line-height: 5.7rem;
+                letter-spacing: 0.2rem;
+            }
+            p{
+                font-size: 1.9rem;
+                width: 80%;
+                margin: auto;
+                margin-top: 4.5rem;
+                margin-bottom: 3rem;
+                line-height: 3.2rem;
+            }
+            .read__more{
+                text-decoration: underline;
+                text-underline-offset: 1.3rem;
+                h3{
+                    font-size: 2.4rem;
+                    font-weight: 100;
+                }
+            }
+        }
+    
+        .home__products__gallery {
+            background-color: white;
+            position: absolute;
+            bottom: 6.5rem;
+            left: 65.5rem;
+            display: grid;
             overflow: hidden;
-            padding: 2rem 0rem;
-            padding-bottom: 0rem;
-            display: flex;
-            align-items: center;
-            width: 60.5vw;
-            .gallery__item{
+            
+    
+            .home__products__gallery__top {
+                padding: 2rem 4rem;
                 display: flex;
-                flex-direction: column;
-                .gallery__item__top {
-                    display: flex;
-                    align-items: center;
+                align-items: center;
+                justify-content: space-between;
+                width: 60.5vw;
+                border-bottom: 1px solid black;
+                
+                h3{
+                    font-size: 2.2rem;
+                    margin-left: -1.5rem;
+                    margin-top: -0.6rem;
+                }
+                .show__all{
+                    margin-right: -1.1rem;
+                    border: 1px solid black;
+                    padding: 1.8rem 1.7rem;
                     h4{
-                        margin-right: 3rem;
                         font-size: 1.5rem;
                     }
                 }
-
-                .gallery__item__bottom {
-                    figure{
-                        height: 31.5rem;
-                        width: 29.9rem;
-                        img{
-                            height: 100%;
-                            width: 100%;
-                            vertical-align: top;
-                            object-fit: cover;
+            }
+    
+            .home__products__gallery__bottom{
+                overflow: hidden;
+                padding: 2rem 0rem;
+                padding-bottom: 0rem;
+                display: flex;
+                align-items: center;
+                width: 60.5vw;
+                
+                .gallery__item{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    .gallery__item__top {
+                        display: flex;
+                        align-items: center;
+                        h4{
+                            margin-right: 3rem;
+                            font-size: 1.5rem;
                         }
                     }
+    
+                    .gallery__item__bottom {
+                        figure{
+                            height: 31.5rem;
+                            width: 29.9rem;
+                            img{
+                                height: 100%;
+                                width: 100%;
+                                vertical-align: top;
+                                object-fit: cover;
+                            }
+                        }
+                    }
+                   
                 }
-               
+    
+                .first{
+                    // display: none;
+                }
             }
         }
     }
+
+
+    .home__container__tablet {
+        @include media('>tablet') {
+            display: none;
+        }
+        height: 100%;
+        width: 100%;
+        background-color: $color-primary;
+        padding: 9.5rem 4rem;
+        padding-bottom: 6.5rem;
+        display: grid;
+        grid-template-columns: repeat(12,8.33333%);
+        grid-template-rows: repeat(12,8.33333%);
+        grid-auto-flow: row dense;
+        .home__container__inner{
+            height: 100%;
+            grid-column-start: 1;
+            grid-column-end: 13;
+            grid-row-start: 1;
+            grid-row-end: 13;
+            border-radius: 2rem;
+            background: linear-gradient(10deg, rgba(10, 7, 7, 0.6), rgba(0, 0, 0, 0.6)), url(https://images.unsplash.com/photo-1621939745912-aad97fd3a34d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80);
+            position: relative;
+            min-height:100%;  
+            background-size:cover;  
+            overflow: hidden;
+            
+            .home__overlay{
+                height: 100%;
+                width: 100%;
+                display: flex;
+                color: white;
+                padding-top: 60rem;
+                flex-direction: column;
+                align-items: center;
+                @include media('<phone') {
+                    padding-top: 10rem;
+                }
+                h2{
+                    font-size: 6rem;
+                    line-height: 5.7rem;
+                    letter-spacing: 0.2rem;
+                    @include media('<phone') {
+                        font-size: 3.5rem;
+                        text-align: center;
+                    }
+                }
+                p{
+                    font-size: 3.9rem;
+                    width: 80%;
+                    margin: auto;
+                    margin-top: 10.5rem;
+                    margin-bottom: 3rem;
+                    line-height: 5.5rem;
+                    text-align: center;
+                    @include media('<phone') {
+                        font-size: 1.8rem;
+                        margin-top: 5rem;
+                        line-height: 2.5rem;
+                        width: 100%;
+                        padding: 0 4rem;
+                        margin-bottom: 0rem;
+                    }
+                }
+                .btns{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin-top: 10rem;
+                    @include media('<phone') {
+                        margin-top: 4rem;
+                    }
+                    .read__more{
+                        margin-right: 3rem;
+                        border: 1px solid white;
+                        padding: 2rem 1.7rem;
+                        @include media('<phone') {
+                            padding: 1rem;
+                        }
+                        h3{
+                            font-size: 2.4rem;
+                            font-weight: 100;
+                        }
+                    }
+                }
+            }
+
+            .home__gallery{
+                position: absolute;
+                bottom: 30rem;
+                z-index: 3;
+                display: inline-block;
+                // padding: 0 calc(50vw - 33.5rem);
+                white-space: nowrap;
+                overflow: hidden;
+                @include media('<phone') {
+                    bottom: calc(50vh * 0.09 );
+                }
+                .gallery__item__media{
+                    border-radius: 2rem;
+                    background: linear-gradient(10deg, rgba(10, 7, 7, 0.3), rgba(0, 0, 0, 0.3));
+                    display: inline-block;
+                    margin-right: 3rem;
+                    font-size: 0;
+                    height: 80rem;
+                    overflow: hidden;
+                    pointer-events: auto;
+                    position: relative;
+                    transform: translateZ(0);
+                    vertical-align: top;
+                    width: 67rem;
+                    @include media('<phone') {
+                        height: calc(50vh * 0.7 );
+                        width: 47rem;
+                    }
+                    .gallery__item__top{
+                        position: absolute;
+                        background: linear-gradient(10deg, rgba(10, 7, 7, 0.6), rgba(0, 0, 0, 0.5));
+                        bottom: 0rem;
+                        width: 100%;
+                        height: 13rem;
+                        z-index: 5;
+                        color: gray;
+                        display: flex;
+                        align-items: center;
+                        @include media('<phone') {
+                            height: 5rem;
+                        }
+                        justify-content: space-between;
+                        h4, span{
+                           font-size: 4rem;
+                           padding: 0rem 1.4rem;
+                           @include media('<phone') {
+                            font-size: 2rem;
+                        }
+                        }
+                    }
+                    .gallery__item__bottom{
+                        figure{
+                            img{
+                                height: 100%;
+                                left: 0;
+                                object-fit: cover;
+                                object-fit: cover;
+                                position: absolute;
+                                top: 0;
+                                width: 100%;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    
 }
