--- a/views/base.pug
+++ b/views/base.pug
@@ -25,6 +25,7 @@ html(class=isDesktop ? "desktop" : isTablet ? "tablet" : isPhone ? "phone" : "" 
     include ./partials/navigation
     //- include ./partials/transition
     include ./pages/home
+    include ./pages/about
     
     
     script(src="main.js") 
