--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -1,135 +1,51 @@
 .home 
-	.home__container 
-		.home__left 
-			figure
-				img(alt="jewelry" src='porche_7.jpg')
-		.home__right 
-			h2="DISCOVER MAGICAL RADIANCE JEWELLERY SET"
-			p="This collection was created in the spring of 2023. When creating the collection, jewelers did not deviate one iota from their principles of responsible attitude to natural resources and the environment"
-			a.read__more
-				h3="READ MORE"
-		.home__products__gallery 
-			.home__products__gallery__top 
-				h3="SELECT PRODUCT CATEGORY"
-				a.show__all(href="/")
-					h4="SHOW ALL" 
-			.home__products__gallery__bottom 
-				article.gallery__item.first
-					.gallery__item__top 
-						h4="NECKLACES"
-						span="/01"
-					.gallery__item__bottom 
-						figure 
-							img(src="porche_10.png", alt="NECKLACE")
-				article.gallery__item
-					.gallery__item__top 
-						h4="RING"
-						span="/02"
-					.gallery__item__bottom 
-						figure 
-							img(src="porche_6.webp", alt="NECKLACE")
-
-				article.gallery__item
-					.gallery__item__top 
-						h4="CHAIN"
-						span="/03"
-					.gallery__item__bottom 
-						figure 
-							img(src="porche_4.webp", alt="NECKLACE")
-
-				article.gallery__item
-					.gallery__item__top 
-						h4="EARING"
-						span="/04"
-					.gallery__item__bottom 
-						figure 
-							img(src="porche_11.png", alt="NECKLACE")
-				
-				article.gallery__item
-					.gallery__item__top 
-						h4="NECKLACES"
-						span="/01"
-					.gallery__item__bottom 
-						figure 
-							img(src="porche_10.png", alt="NECKLACE")
-	
 	.home__container__tablet 
 		.home__container__inner
 			.home__overlay
 				h2="DISCOVER MAGICAL RADIANCE JEWELLERY SET"
-				p="This collection was created in the spring of 2023. When creating the collection, jewelers did not deviate one iota from their principles of responsible attitude to natural resources and the environment"
 				.btns
 					a.read__more
 						h3="READ MORE"
 					a.read__more
 						h3="SEE ALL"
-			.home__gallery 
-				a.gallery__item__media.first
-					.gallery__item__top 
-						h4="NECKLACES"
-						span="/01"
-					.gallery__item__bottom 
-						figure 
-							img(src="porche_10.png", alt="NECKLACE")
-				a.gallery__item__media.first
-					.gallery__item__top 
-						h4="NECKLACES"
-						span="/01"
-					.gallery__item__bottom 
-						figure 
-							img(src="porche_10.png", alt="NECKLACE")
-				a.gallery__item__media.first
-					.gallery__item__top 
-						h4="NECKLACES"
-						span="/01"
-					.gallery__item__bottom 
-						figure 
-							img(src="porche_10.png", alt="NECKLACE")
-				a.gallery__item__media.first
-					.gallery__item__top 
-						h4="NECKLACES"
-						span="/01"
-					.gallery__item__bottom 
-						figure 
-							img(src="porche_10.png", alt="NECKLACE")
-				a.gallery__item__media.first
-					.gallery__item__top 
-						h4="NECKLACES"
-						span="/01"
-					.gallery__item__bottom 
-						figure 
-							img(src="porche_10.png", alt="NECKLACE")
-				//- article.gallery__item
-				//- 	.gallery__item__top 
-				//- 		h4="RING"
-				//- 		span="/02"
-				//- 	.gallery__item__bottom 
-				//- 		figure 
-				//- 			img(src="porche_6.webp", alt="NECKLACE")
-
-				//- article.gallery__item
-				//- 	.gallery__item__top 
-				//- 		h4="CHAIN"
-				//- 		span="/03"
-				//- 	.gallery__item__bottom 
-				//- 		figure 
-				//- 			img(src="porche_4.webp", alt="NECKLACE")
-
-				//- article.gallery__item
-				//- 	.gallery__item__top 
-				//- 		h4="EARING"
-				//- 		span="/04"
-				//- 	.gallery__item__bottom 
-				//- 		figure 
-				//- 			img(src="porche_11.png", alt="NECKLACE")
-				
-				//- article.gallery__item
-				//- 	.gallery__item__top 
-				//- 		h4="NECKLACES"
-				//- 		span="/01"
-				//- 	.gallery__item__bottom 
-				//- 		figure 
-				//- 			img(src="porche_10.png", alt="NECKLACE")
-	
-
-					
+	.home__showcase 
+		p.showcase__label="JEWELLERY FOR EVERY OCCASION"
+		h2
+			span="GET AFFORDABLE " 
+			span="LUXURY DESIGNED " 
+			span="JEWELRY"
+		p.showcase__description="This collection was created in the spring of 2023. When creating the collection, jewelers did not deviate one iota from their principles of responsible attitude to natural resources and the environment"
+		.home__showcase__media 
+			figure.home__showcase__media__box 
+				img.home__showcase__media__image(src="https://images.unsplash.com/photo-1611955167811-4711904bb9f8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80", alt="")
+		.home__showcase__media 
+			figure.home__showcase__media__box 
+				img.home__showcase__media__image(src="https://images.unsplash.com/photo-1583484370773-c1af4e528d5e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80", alt="")
+		.home__showcase__media 
+			figure.home__showcase__media__box 
+				img.home__showcase__media__image(src="https://images.unsplash.com/photo-1602173574767-37ac01994b2a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1035&q=80", alt="")
+		.home__showcase__media 
+			figure.home__showcase__media__box 
+				img.home__showcase__media__image(src="https://images.unsplash.com/photo-1611087388916-b6c97e01735b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=996&q=80", alt="")
+	.home__highlight 
+		.home__highlight__box
+			p.home__highlight__description
+				span.home__highlight__description__text="POCHÉ pieces are "
+				span.home__highlight__description__text=" designed to provoke thought and attract attention. "
+				br
+				span.home__highlight__description__text="Each mindfully enhances the style, personality and vibe of their "
+				br
+				span.home__highlight__description__text=" wearers through playful "
+				span.home__highlight__description__text=" combinations of color and shape.  " 
+				br
+				span.home__highlight__description__text="Never subtle, always with a strong point of view. "
+				span.home__highlight__description__text="Just like their wearers, "
+				br
+				span.home__highlight__description__text="they are not for everybody - and that is what makes them exceptional."
+			img.home__highlight__image(src="porche_1.webp", alt="")
+			img.home__highlight__image(src="porche_2.webp", alt="")
+			img.home__highlight__image(src="porche_3.webp", alt="")
+			img.home__highlight__image(src="porche_4.webp", alt="")
+			img.home__highlight__image(src="porche_5.webp", alt="")
+			img.home__highlight__image(src="porche_6.webp", alt="")
+			img.home__highlight__image(src="porche_1.webp", alt="")
