--- a/styles/index.scss
+++ b/styles/index.scss
@@ -11,3 +11,4 @@
 @import './components/transition';
 @import './layout/navigation';
 @import './pages/home/home.scss';
+@import './pages/about/about.scss';
