--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -49,3 +49,29 @@
 			img.home__highlight__image(src="porche_5.webp", alt="")
 			img.home__highlight__image(src="porche_6.webp", alt="")
 			img.home__highlight__image(src="porche_1.webp", alt="")
+	
+	.home__collections
+		.home__collections__wrapper 
+			.home__collections__content
+				p.home__collections__label="This season"
+				h2.home__collections__title
+					span="LUXURY"
+					span="JEWELLERY" 
+			.home__collections__gallery
+				a.home__collections__gallery__media(href="")
+					figure 
+						img.home__collections__gallery__image(src="porche_1.webp", alt="")
+				a.home__collections__gallery__media(href="")
+					figure 
+						img.home__collections__gallery__image(src="porche_1.webp", alt="")
+				a.home__collections__gallery__media(href="")
+					figure 
+						img.home__collections__gallery__image(src="porche_1.webp", alt="")
+				a.home__collections__gallery__media(href="")
+					figure 
+						img.home__collections__gallery__image(src="porche_1.webp", alt="")
+				a.home__collections__gallery__media(href="")
+					figure 
+						img.home__collections__gallery__image(src="porche_1.webp", alt="")
+		
+		.home__collections__products
