--- a/views/base.pug
+++ b/views/base.pug
@@ -1,6 +1,7 @@
 block variables
  
 doctype html
+//- .navigation--open
 html(class=isDesktop ? "desktop" : isTablet ? "tablet" : isPhone ? "phone" : "" lang="en")
   head
     meta(charset="UTF-8")
