--- a/views/partials/navigation.pug
+++ b/views/partials/navigation.pug
@@ -1,10 +1,28 @@
 nav.navigation
   a.navigation__link(href="/")
-    svg.bi.bi-filter-left(xmlns='http://www.w3.org/2000/svg' width='32' height='32' fill='currentColor' viewbox='0 0 16 16')
+    svg.open.bi.bi-filter-left(xmlns='http://www.w3.org/2000/svg' width='32' height='32' fill='currentColor' viewbox='0 0 16 16')
         path(d='M2 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z')
+
+    svg.close.bi.bi-x(xmlns='http://www.w3.org/2000/svg' width='32' height='32' fill='currentColor' viewbox='0 0 16 16')
+      path(d='M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z')
 
   ul.navigation__list
     li.navigation__list__item
         a.navigation__list__link(data-animation="link" href='/')
             span="CART (0)"
+
+nav.side__menu 
+  .side__menu__box 
+    ul.side__menu__list 
+      li.side__menu__list__item 
+        a.side__menu__list__link(href="")="Shop"
+      li.side__menu__list__item 
+        a.side__menu__list__link(href="")="About"
+      li.side__menu__list__item 
+        a.side__menu__list__link(href="")="Collections"
+    
+    
+      
+      
+
   
